# devmind

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  MANIFEST.in  PR_WORKFLOW.md  README.md  README.zh-CN.md  docker-compose.dev.yml  docker-compose.yml  env.sample  pyproject.toml  worklog.md
.github/workflows/: build_and_deploy.yml  pr_agent.yml
backend/: agent_runner.py  manage.py  pytest.ini
backend/accounts/: access.py  adapters.py  apps.py  context_processors.py  serializers.py  signals.py  urls.py
backend/agent_runner/: base.py  spec.py
backend/ai_assistant/: __init__.py  apps.py  bootstrap.py  contracts.py  discovery.py  models.py  policies.py  provider.py  registry.py  runtime.py  serializers.py  services.py  skills.py  suggestions.py  urls.py  views.py
backend/ai_pricehub/: admin.py  apps.py  config_loader.py  llm_config.py  models.py  parser_agent.py  services.py  tracked_llm.py  urls.py
backend/app_config/: admin.py  serializers.py  tests.py  urls.py
backend/cloud_billing/: admin.py  alert_messages.py  constants.py  daily_report.py  dashboard.py  models.py  periodic_tasks.py  serializers.py  tasks.py  tracked_llm.py  urls.py
backend/core/: __init__.py  celery.py  db.sqlite3.bak.1781500487  middleware.py  periodic_registry.py  sentry.py  urls.py
backend/data_collector/: __init__.py  conf.py  serializers.py  tasks.py
backend/data_ops/: admin.py  apps.py  llm_config.py  models.py  periodic_tasks.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/external_proxy/: __init__.py  admin.py  apps.py  encrypted_fields.py  models.py  routing.py  serializers.py  services.py  url_safety.py  urls.py  views.py
backend/hyperbdr_dashboard/: apps.py  client.py  models.py  periodic_tasks.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/llm_ops/: admin.py  apps.py  assistant_tools.py  audit.py  catalog_maintenance.py  collection_services.py  constants.py  global_config.py  llm_config.py  meta_model_lookup.py  models.py  periodic_tasks.py  seed_data.py  serializers.py  services.py  signals.py  skill_runner.py  tasks.py  urls.py  views.py  workflow_config.py
backend/quotation/: access.py  admin.py  audit.py  health_urls.py  metrics.py  middleware.py  models.py  permissions.py  security_alerts.py  serializers.py  tasks.py  test_audit.py  test_catalog_api.py  test_document_parsing.py  test_document_storage_endpoints.py  test_feishu_oauth_return.py  test_feishu_service.py  test_feishu_token_encryption.py  test_file_lifecycle.py  test_hardening.py  test_pdf_conversion.py  test_security_alerts.py  test_settings.py  test_storage.py  test_storage_control_plane.py  test_storage_migration.py  test_upload_validation.py  tests.py  urls.py
backend/sals/: __init__.py  admin.py  apps.py  conftest.py  models.py  periodic_tasks.py  serializers.py  tasks.py  test_etl.py  test_tasks.py  tests.py  urls.py  views.py
backend/tests/: test_celery_task_registration.py  test_core_periodic_registry.py  test_core_urls.py  test_dependency_constraints.py  test_init_backend_command.py  test_quotation_integration_routes.py  test_register_periodic_tasks_command.py  test_sentry.py
config/: feishu_apps.toml
devmind/accounts/: access.py  admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py
devmind/agent_runner/: __init__.py  base.py
devmind/ai_pricehub/: __init__.py  config_loader.py  extraction.py  harness.py  models.py  parser_agent.py  serializers.py  services.py  skill_runner.py  source_config_store.py  tasks.py  urls.py  vendor_skills.py  views.py
devmind/app_config/: apps.py  models.py  signals.py  utils.py
devmind/cloud_billing/: CLOUD_BILLING_INSTALL.md  __init__.py  admin.py  alert_messages.py  apps.py  constants.py  dashboard.py  models.py  periodic_tasks.py  serializers.py  tasks.py  tests.py  tracked_llm.py  urls.py
devmind/core/: asgi.py  celery.py  paginations.py  periodic_registry.py  urls.py
devmind/data_collector/: api_urls.py  apps.py  models.py  serializers.py  tasks.py  urls.py  utils.py
devmind/hyperbdr_dashboard/: services.py  urls.py
devmind/hyperbdr_monitor/: __init__.py  apps.py  client.py  encryption.py  models.py  periodic_tasks.py  serializers.py  tasks.py  urls.py  views.py
devmind/llm_tracker/: README.md  __init__.py  admin.py  apps.py  llm_service.py  llm_tracker.py  llm_usage.py  llm_usage_stats.py  models.py  urls.py  views.py
devmind/notifier/: __init__.py  admin.py  apps.py  constants.py  models.py
devmind/onepro_monitor/: __init__.py  apps.py  client.py  encryption.py  models.py  periodic_tasks.py  serializers.py  tasks.py  views.py
devmind/task_manager/: README.md  __init__.py  admin.py  constants.py  models.py  serializers.py  task_lock.py  urls.py  utils.py
devmind/tests/: core_periodic_registry_settings.py  test_periodic_registry.py
docker/: create-superuser.sh  entrypoint.sh  logrotate.conf
docker/nginx/: default.conf  default.dev.conf  external_proxy.inc  upstream.conf.default
docs/: CLOUD_BILLING_BALANCE_INTEGRATION.zh-CN.md  DESIGN_PRINCIPLES.md  DESIGN_PRINCIPLES.zh-CN.md  recharge-approval-notification-swimlane.html
docs/ai-assistant/: capability-provider.md
docs/data_ops/: currency.md
docs/llm-ops/: overview-refactor.codex.md
docs/operations/: llm_ops_official_price_reset.md
docs/quotation/: feishu-control-plane-rollout.md  feishu-drive-setup.zh-CN.md  security-alerts.md
docs/review_histories/: ray-code-standards_000000.md  ray-code-standards_0fc0a4.md  ray-code-standards_3b0024.md  ray-code-standards_8bbfc6.md  ray-code-standards_9241fd.md  ray-code-standards_af92bb.md  ray-code-standards_agentcore-notifier.md  ray-code-standards_agentcore-task.md  (+1 more)
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  playwright.config.cjs  tailwind.config.js  tsconfig.json  vite.config.js
sals/backend/: .env.example  README.md  data.db.bak  data.db.bak.1  pyproject.toml
sals/backend/app/: database.py  etl.py  main.py  models.py  schemas.py
sals/backend/tests/: test_etl.py
scripts/: devmindctl.sh  install.sh
(+1275 files in other folders)
