[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "devmind"
version = "0.1.0"
description = "DevMind API"
authors = [
    {name = "Ray Sun", email = "xiaoquqi@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "django==5.1.4",
    "djangorestframework==3.15.2",
    "djangorestframework_simplejwt==5.3.1",
    "djangorestframework-camel-case==1.4.2",
    "dj-rest-auth==7.0.0",
    "drf-yasg",
    "drf-spectacular",
    "python-dotenv",
    "dj_database_url==2.3.0",
    "mysqlclient==2.1.1",
    "celery==5.3.1",
    "django-celery-beat==2.7.0",
    "django_celery_results",
    "flower==2.0.1",
    "redis",
    "gunicorn==20.1.0",
    "gnews>=0.2.7",
    "newspaper4k>=0.1.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "gne>=0.3.0",
    "trafilatura>=1.6.0",
    "readability-lxml>=0.8.1",
    "django-json-widget>=1.1.1",
    "devtoolbox[llm] @ git+https://github.com/cloud2ai/devtoolbox.git",
    "devtoolbox[storage] @ git+https://github.com/cloud2ai/devtoolbox.git",
    "devtoolbox[image] @ git+https://github.com/cloud2ai/devtoolbox.git",
    "django-allauth>=0.57.0",
    "django-cors-headers>=4.3.0",
    "django-extensions>=3.2.3",
    "lxml_html_clean>=0.1.0",
    # LangGraph workflow orchestration
    "langgraph>=0.6.7,<0.7.0",
    "langgraph-checkpoint>=2.1.1,<3.0.0",
    "langgraph-checkpoint-redis>=0.1.1,<0.2.0",
    "json-repair>=0.25.0",
    "markdown>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.2",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[tool.setuptools]
packages = ["devmind"]

[project.scripts]
devmind-manager = "devmind.manage:main"