[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Backend API"
authors = [
    {name = "Ray Sun", email = "xiaoquqi@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "django==5.1.4",
    "djangorestframework==3.15.2",
    "djangorestframework_simplejwt==5.3.1",
    "djangorestframework-camel-case==1.4.2",
    "dj-rest-auth==7.0.0",
    "drf-spectacular",
    "python-dotenv",
    "dj_database_url==2.3.0",
    # "mysqlclient==2.1.1",  # Kept for backward compatibility (MySQL/MariaDB support)
    "PyMySQL",
    "psycopg2-binary>=2.9.9",  # PostgreSQL adapter (recommended)
    "celery==5.3.1",
    "django-celery-beat==2.7.0",
    "django_celery_results",
    "flower==2.0.1",
    "redis",
    "channels>=4.1,<4.2",
    "daphne>=4.1,<4.2",
    "channels_redis>=4.2,<4.3",
    "gunicorn==20.1.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "cryptography>=44.0.0",
    "pydantic>=2.7.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "deepagents==0.4.9",
    "langfuse>=4.0.0,<5.0.0",
    "jira>=3.10.0",
    "python-dateutil>=2.8.2",
    "django-json-widget>=1.1.1",
    # Cloud billing providers
    "boto3>=1.34.0",  # AWS SDK
    "azure-identity>=1.15.0",  # Azure authentication
    "azure-mgmt-consumption>=10.0.0",  # Azure consumption management
    "azure-mgmt-resource>=23.0.0",  # Azure resource management
    "alibabacloud-bssopenapi20171214>=3.0.0",  # Alibaba Cloud BSS API
    "alibabacloud-sts20150401>=1.2.0",  # Alibaba Cloud STS (GetCallerIdentity for account ID)
    "alibabacloud-tea-openapi>=0.3.0",  # Alibaba Cloud Tea OpenAPI
    "huaweicloudsdkcore>=3.1.0",  # Huawei Cloud SDK core
    "huaweicloudsdkbssintl>=3.1.0",  # Huawei Cloud BSS international
    "huaweicloudsdkbss>=3.1.0",  # Huawei Cloud BSS
    "tencentcloud-sdk-python-common>=3.0.0",  # Tencent Cloud SDK common
    "tencentcloud-sdk-python-billing>=3.0.0",  # Tencent Cloud Billing API
    "django-allauth>=0.57.0",
    "django-cors-headers>=4.3.0",
    "django-extensions>=3.2.3",
    # Agentcore submodules (Django apps). Production installs from GitHub; dev overlays with pip install -e in agentcore path.
    "agentcore-metering @ git+https://github.com/cloud2ai/agentcore-metering.git",
    "agentcore-task @ git+https://github.com/cloud2ai/agentcore-task.git",
    "agentcore-notifier @ git+https://github.com/cloud2ai/agentcore-notifier.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.2",
    "black>=22.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
markers = [
    "unit: App-level unit tests (domain logic, services, model methods).",
]

[tool.setuptools]
packages = ["backend"]

[project.scripts]
backend-manager = "backend.manage:main"
