[project]
name = "after-sales-dashboard"
version = "0.1.0"
description = "售后管理驾驶舱"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.13.3",
]
